[package]
name = "hikvision-client"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex-literal = "0.4.1"
hmac = "0.12.1"
md-5 = "0.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
